--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+  get: ^4.6.1
   flutter_lints: ^1.0.0
   http: ^0.13.4
   weather_icons: ^3.0.0
   webview_flutter: ^3.0.2
+  webview_flutter_plus: ^0.3.0+2
+  flutter_js: ^0.5.0+6
+  syncfusion_flutter_charts: ^20.1.47+1
+  flutter_html : ^3.0.0-alpha.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -47,6 +52,8 @@ flutter:
      - Images/ui.png
      - Images/weather.png
      - Images/ui2.png
+     - Assets/html/sss.html
+     - assets/html/aaa.html
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
